Installed Sealed Secrets (II)

--- a/argocd/apps/sealed-secrets.yaml
+++ b/argocd/apps/sealed-secrets.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
     namespace: toolbox
   sources: 
-    - chart: external-secrets
+    - chart: sealed-secrets
       repoURL: https://bitnami-labs.github.io
       targetRevision: 2.17.3
   syncPolicy:
