--- a/argocd/apps/sealed-secrets.yaml
+++ b/argocd/apps/sealed-secrets.yaml
@@ -14,7 +14,7 @@ spec:
     namespace: toolbox
   sources: 
     - chart: sealed-secrets
-      repoURL: https://bitnami-labs.github.io
+      repoURL: https://bitnami-labs.github.io/sealed-secrets
       targetRevision: 2.17.3
   syncPolicy:
     automated:
