--- a/argocd/manifests/certificates/base/crypto-stop-loss-bot-certificate.yaml
+++ b/argocd/manifests/certificates/base/crypto-stop-loss-bot-certificate.yaml
@@ -1,9 +1,9 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: harbor-certificate
+  name: crypto-stop-loss-bot-certificate
   labels:
-    app.kubernetes.io/name: harbor-certificate
+    app.kubernetes.io/name: crypto-stop-loss-bot-certificate
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     argocd.argoproj.io/sync-options: Prune=true
