--- a/argocd/apps/crypto-stop-loss-bot.yaml
+++ b/argocd/apps/crypto-stop-loss-bot.yaml
@@ -11,7 +11,7 @@ spec:
   project: vps-jmsola-dev-project
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
+    namespace: crypto-stop-loss-bot
   source: 
     path: argocd/manifests/crypto-stop-loss-bot/overlay/contabo
     repoURL: https://github.com/jsoladur/contabo-vps-gitops-argocd.git
