--- a/argocd/manifests/crypto-stop-loss-bot/base/service.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/service.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 8000
-      targetPort: http
+    - port: 80
+      targetPort: 8000
       protocol: TCP
       name: http
   selector:
