Created github creds secret for argocd-image-updater

--- a/argocd/apps/argocd-image-updater.yaml
+++ b/argocd/apps/argocd-image-updater.yaml
@@ -23,6 +23,9 @@ spec:
             refresh: 60s
       repoURL: https://argoproj.github.io/argo-helm
       targetRevision: 0.12.2
+    - path: argocd/manifests/argocd-image-updater/overlay/contabo
+      repoURL: https://github.com/jsoladur/contabo-vps-gitops-argocd.git
+      targetRevision: main
   syncPolicy:
     automated:
       prune: true
