--- a/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: crypto-stop-loss-bot
-          image: docker.io/josemariasoladuran/crypto-stop-loss-bot:0.1.0b4
+          image: docker.io/josemariasoladuran/crypto-stop-loss-bot:0.1.0
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
