Makes effect upon file .argocd-source-argocd_crypto-stop-loss-bot.yaml

--- a/argocd/manifests/crypto-stop-loss-bot/overlay/contabo/kustomization.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/overlay/contabo/kustomization.yaml
@@ -1,11 +1,12 @@
 resources: 
 - ../../base
 - ingress-route.yaml
-
 namespace: crypto-stop-loss-bot
-
 patches:
   - path: add-deployment-env-vars.yaml
     target:
       kind: Deployment
       name: crypto-stop-loss-bot
+  - path: .argocd-source-argocd_crypto-stop-loss-bot.yaml
+    target:
+      kind: Kustomization
