Makes effect upon file .argocd-source-argocd_crypto-stop-loss-bot.yaml (II)

--- a/argocd/apps/crypto-stop-loss-bot.yaml
+++ b/argocd/apps/crypto-stop-loss-bot.yaml
@@ -7,9 +7,10 @@ metadata:
     argocd.argoproj.io/sync-wave: "1"
     # Enable image updater for this application
     argocd-image-updater.argoproj.io/enable: "true"
-    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd-image-updater/github-creds
     argocd-image-updater.argoproj.io/update-strategy: semver # to apply for all the images
     argocd-image-updater.argoproj.io/image-list: docker.io/josemariasoladuran/crypto-stop-loss-bot:^0.1.0
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd-image-updater/github-creds
+    argocd-image-updater.argoproj.io/write-back-target: "kustomization:../../base"
     # Disable automatic updates for specific images
     # Uncomment the following line to ignore specific image tags
     # argocd-image-updater.argoproj.io/<image_alias>.ignore-tags: "*"
