--- a/argocd/apps/crypto-stop-loss-bot.yaml
+++ b/argocd/apps/crypto-stop-loss-bot.yaml
@@ -8,7 +8,7 @@ metadata:
     # Enable image updater for this application
     argocd-image-updater.argoproj.io/enable: "true"
     argocd-image-updater.argoproj.io/update-strategy: semver # to apply for all the images
-    argocd-image-updater.argoproj.io/image-list: docker.io/josemariasoladuran/crypto-stop-loss-bot:^0.1.0
+    argocd-image-updater.argoproj.io/image-list: docker.io/josemariasoladuran/crypto-stop-loss-bot
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd-image-updater/github-creds
     argocd-image-updater.argoproj.io/write-back-target: "kustomization:../../base"
     # Disable automatic updates for specific images
