--- a/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
@@ -29,6 +29,10 @@ spec:
               value: "true"
             - name: BACKGROUND_TASKS_ENABLED
               value: "true"
+            - name: DATABASE_IN_MEMORY
+              value: "false"
+            - name: DATABASE_PATH
+              value: "/app/db/crypto_stop_loss.sqlite"
             - name: BIT2ME_API_BASE_URL
               value: "https://gateway.bit2me.com"
             - name: GOOGLE_OAUTH_CLIENT_ID
@@ -77,3 +81,10 @@ spec:
             initialDelaySeconds: 45
             timeoutSeconds: 3
             failureThreshold: 2
+          volumeMounts:
+            - name: sqlite-storage
+              mountPath: /app/db  # <-- SQLite file will go here
+      volumes:
+        - name: sqlite-storage
+          persistentVolumeClaim:
+            claimName: sqlite-pvc
