--- a/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: CORS_ENABLED
               value: "false"
             - name: TELEGRAM_BOT_ENABLED
-              value: "false"
+              value: "true"
             - name: BACKGROUND_TASKS_ENABLED
               value: "true"
             - name: DATABASE_IN_MEMORY
