Added AUTHORIZED_GOOGLE_USER_EMAILS_COMMA_SEPARATED env variable to crypto-stop-loss-bot

--- a/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: crypto-stop-loss-bot
 spec: 
-  replicas: 1
+  replicas: 0
   selector:
     matchLabels:
       app.kubernetes.io/name: crypto-stop-loss-bot
@@ -35,6 +35,8 @@ spec:
               value: "/app/db/crypto_stop_loss.sqlite"
             - name: BIT2ME_API_BASE_URL
               value: "https://gateway.bit2me.com"
+            - name: AUTHORIZED_GOOGLE_USER_EMAILS_COMMA_SEPARATED
+              value: "josemaria.sola.duran@gmail.com,jmsola3092@gmail.com"
             - name: GOOGLE_OAUTH_CLIENT_ID
               valueFrom:
                 secretKeyRef:
