--- a/argocd.apps.removed/cert-manager.yaml
+++ b/argocd.apps.removed/cert-manager.yaml
@@ -8,7 +8,7 @@ metadata:
   finalizers:
   - argocd.argoproj.io/resources-finalizer
 spec:
-  project: vps-jmsola-dev-project
+  project: nas-manueltortega-dev-project
   destination:
     server: https://kubernetes.default.svc
     namespace: toolbox
