--- a/argocd.apps.removed/reflector.yaml
+++ b/argocd.apps.removed/reflector.yaml
@@ -1,21 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: certificates
+  name: reflector
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "-3"
   finalizers:
   - argocd.argoproj.io/resources-finalizer
 spec:
-  project: vps-jmsola-dev-project
+  project: nas-manueltortega-dev-project
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
+    namespace: toolbox
   source: 
-    path: argocd/manifests/certificates/overlay/contabo
-    repoURL: https://github.com/jsoladur/contabo-vps-gitops-argocd.git
-    targetRevision: main
+    chart: reflector
+    repoURL: https://emberstack.github.io/helm-charts
+    targetRevision: 9.1.11
   syncPolicy:
     automated:
       prune: true
