--- a/argocd/manifests/crypto-stop-loss-bot/overlay/contabo/ingress-route.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/overlay/contabo/ingress-route.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`crypto-bot.vps.jmsola.dev`) && PathPrefix(`/`)
+  - match: Host(`crypto-bot.vps.plagasagricolas.es`) && PathPrefix(`/`)
     kind: Rule
     services:
     - name: crypto-stop-loss-bot
