--- a/argocd/project.yaml
+++ b/argocd/project.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: nas-manueltortega-dev-project
+  name: vps-plagasagricolas-es-project
   namespace: argocd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - argocd.argoproj.io/resources-finalizer
 spec:
   # Project description
-  description: 
+  description: "Project for VPS Plagas Agricolas ES"
   # Allow manifests to deploy from any Git repos
   sourceRepos:
   - '*'
@@ -23,15 +23,15 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nas-manueltortega-dev
+  name: vps-plagasagricolas-es
   namespace: argocd
   finalizers:
   - argocd.argoproj.io/resources-finalizer
 spec:
-  project: nas-manueltortega-dev-project
+  project: vps-plagasagricolas-es-project
   destination:
     server: https://kubernetes.default.svc
-    namespace: nas-manueltortega-dev
+    namespace: vps-plagasagricolas-es
   source:
     path: argocd/apps
     repoURL: https://github.com/manueltortega/contabo-vps-gitops-argocd.git
