Deploying bot 0.40.1 (II)

--- a/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app.kubernetes.io/name: crypto-stop-loss-bot
 spec: 
-  replicas: 0
+  replicas: 1
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       app.kubernetes.io/name: crypto-stop-loss-bot
@@ -63,26 +64,27 @@ spec:
                   name: crypto-stop-loss-bot
                   key: bit2me.api.secret
           resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
             limits:
-              cpu: "2"
-              memory: "2Gi"
+              memory: "4Gi"
+            requests:
+              memory: "1Gi"
+              cpu: "1"
           readinessProbe:
             httpGet:
               path: /health/status
               port: 8000
-            initialDelaySeconds: 30
-            timeoutSeconds: 3
-            failureThreshold: 2
+            initialDelaySeconds: 40    # wait a bit longer before first check
+            timeoutSeconds: 5          # allow more time for the response
+            periodSeconds: 15          # check every 15 seconds
+            failureThreshold: 3        # allow 3 consecutive failures before marking NotReady
           livenessProbe:
             httpGet:
               path: /health/status
               port: 8000
-            initialDelaySeconds: 45
-            timeoutSeconds: 3
-            failureThreshold: 2
+            initialDelaySeconds: 60    # wait longer before first liveness check
+            timeoutSeconds: 5
+            periodSeconds: 20
+            failureThreshold: 4        # allow 4 consecutive failures before restarting
           volumeMounts:
             - name: sqlite-storage
               mountPath: /app/db  # <-- SQLite file will go here
